--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   firebase_database: ^10.5.6
   email_validator: ^2.1.17
   image_picker: ^1.1.1
+  cloud_firestore: ^4.17.4
+  firebase_storage: ^11.7.6
 
 dev_dependencies:
   flutter_test:
@@ -120,6 +122,7 @@ flutter:
 
   assets:
     - assets/images/
+    - assets/images/anon.png
 
 flutter_launcher_icons:
   android: "launcher_icon"
